--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -94,8 +94,10 @@
   "messageDeletionForbidden": "You don’t have permission to delete others’ messages",
   "deleteJustForMe": "Delete just for me",
   "deleteForEveryone": "Delete for everyone",
-  "deleteMessagesQuestion": "Delete $count$ messages?",
-  "deleteMessageQuestion": "Delete this message?",
+  "deleteMessagesQuestion": "This will permanently delete the  selected $count$ messages.",
+
+  
+  "deleteMessageQuestion": "This will permanently delete the  selected messages.",
   "deleteMessages": "Delete Messages",
   "deleted": "$count$ deleted",
   "messageDeletedPlaceholder": "This message has been deleted",
@@ -234,7 +236,7 @@
   "leaveGroup": "Leave Group",
   "leaveAndRemoveForEveryone": "Leave Group and remove for everyone",
   "leaveGroupConfirmation": "Are you sure you want to leave this group?",
-  "leaveGroupConfirmationAdmin": "As you are the admin of this group, if you leave it it will be removed for every current members. Are you sure you want to leave this group?",
+  "leaveGroupConfirmationAdmin": "Because you are the creator of this group. it will be deleted for everyone. This cannot be undone",
   "cannotRemoveCreatorFromGroup": "Cannot remove this user",
   "cannotRemoveCreatorFromGroupDesc": "You cannot remove this user as they are the creator of the group.",
   "noContactsForGroup": "You don't have any contacts yet",
@@ -244,7 +246,7 @@
   "selectMessage": "Select message",
   "editGroup": "Edit group",
   "editGroupName": "Edit group name",
-  "updateGroupDialogTitle": "Updating $name$...",
+  "updateGroupDialogTitle": "Change Group Name",
   "showRecoveryPhrase": "Recovery Phrase",
   "yourBchatID": "Your BChat ID",
   "setAccountPasswordTitle": "Set Account Password",
@@ -293,14 +295,14 @@
   "invalidPubkeyFormat": "Invalid Pubkey Format",
   "emptyGroupNameError": "Please enter a group name",
   "editProfileModalTitle": "Profile",
-  "groupNamePlaceholder": "Group Name",
+  "groupNamePlaceholder": "Secret Group",
   "inviteContacts": "Invite Contacts",
   "addModerators": "Add Moderators",
   "removeModerators": "Remove Moderators",
   "addAsModerator": "Add as Moderator",
   "removeFromModerators": "Remove From Moderators",
   "add": "Add",
-  "addingContacts": "Adding contacts to $name$",
+  "addingContacts": "Add Members",
   "noContactsToAdd": "No contacts to add",
   "noMembersInThisGroup": "No other members in this group",
   "noModeratorsToRemove": "no moderators to remove",
